src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>New Release Sales Process</fullName>
        <description>Used for New Release Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Work</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Strategic Agreement Sales Process</fullName>
        <description>Used for Strategic Agreement Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approval Process</fullName>
        </values>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Financial Analysis</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>VSP Consignment Sales Process</fullName>
        <description>Used for Consignment Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Work</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>VSP Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Development</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Work</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AR__c</fullName>
        <inlineHelpText>Profitable practices will be 60% or greater</inlineHelpText>
        <label>% AR</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <formula>Account.Phone</formula>
        <label>Account Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <label>Account Physical City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <label>Account Physical State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_Street_Address__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <label>Account Physical Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_ZIP_Code__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <label>Account Physical ZIP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Value_Timeframe__c</fullName>
        <description>Timeline for expected Amount.</description>
        <label>Amount Value Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>24 Months</fullName>
                </value>
                <value>
                    <fullName>36 Months</fullName>
                </value>
                <value>
                    <fullName>48 Months</fullName>
                </value>
                <value>
                    <fullName>60 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bifocal__c</fullName>
        <inlineHelpText>Profitable practices will be less than 10%</inlineHelpText>
        <label>% Bifocal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buying_Alliance_Affiliation__c</fullName>
        <label>Buying Alliance Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PECAA</fullName>
                </value>
                <value>
                    <fullName>IDOC</fullName>
                </value>
                <value>
                    <fullName>VISION SOURCE</fullName>
                </value>
                <value>
                    <fullName>VISION TRENDS</fullName>
                </value>
                <value>
                    <fullName>TODAY&apos;S VISION</fullName>
                </value>
                <value>
                    <fullName>PEN</fullName>
                </value>
                <value>
                    <fullName>OPTI-PORT</fullName>
                </value>
                <value>
                    <fullName>HEA</fullName>
                </value>
                <value>
                    <fullName>PERC/IVA</fullName>
                </value>
                <value>
                    <fullName>TSO</fullName>
                </value>
                <value>
                    <fullName>FIRST EYE CARE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Lens_Kit_ID__c</fullName>
        <formula>CASE(TEXT(Contact_Lens_Kit__c),
																&apos;FK UNITY BIOSYNC B SPH 8.8&apos;, &apos;00194315004607&apos;
																,&apos;&apos;)</formula>
        <label>Contact Lens Kit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Lens_Kit__c</fullName>
        <inlineHelpText>Full Kit Name</inlineHelpText>
        <label>Contact Lens Kit</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FK UNITY BIOSYNC B SPH 8.8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cross_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Opportunity a Cross Sell?</description>
        <label>Cross-Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Lab_Affiliation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Lab of Choice</inlineHelpText>
        <label>Current Lab Affiliation</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Product_Promotion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Product/Promotion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Description__c</fullName>
        <description>Shortened description to be displayed on embedded visualforce page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DS_Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_Left__c</fullName>
        <formula>End_Date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DialSource__DS_Owner_ID__c</fullName>
        <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DS Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <description>Total number of calls made on this record</description>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division_Brand__c</fullName>
        <description>What Division/Brand is the Opportunity?</description>
        <label>Division/Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>VSPOne</fullName>
                </value>
                <value>
                    <fullName>UNITY</fullName>
                </value>
                <value>
                    <fullName>TechShield</fullName>
                </value>
                <value>
                    <fullName>otto</fullName>
                </value>
                <value>
                    <fullName>IOF</fullName>
                </value>
                <value>
                    <fullName>sunsync</fullName>
                </value>
                <value>
                    <fullName>Ethos</fullName>
                </value>
                <value>
                    <fullName>Network Participation</fullName>
                </value>
                <value>
                    <fullName>Marchon</fullName>
                </value>
                <value>
                    <fullName>Altair</fullName>
                </value>
                <value>
                    <fullName>Global Business Development</fullName>
                </value>
                <value>
                    <fullName>Contact Lenses</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Optics Only</fullName>
                </value>
                <value>
                    <fullName>Pathways Expansion</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date the Product/Program ends.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eyefinity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eyefinity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Provided__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Feedback Provided</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOB_Feedback__c</fullName>
        <label>LOB Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Referral__c</fullName>
        <description>Which LOB is referring an Opportunity?</description>
        <inlineHelpText>Which LOB is referring an Opportunity?</inlineHelpText>
        <label>LOB Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Vision Care</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTM_Revenue_Benchmark__c</fullName>
        <label>LTM Revenue Benchmark</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lab_spend_of_new_practice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab spend of new practice</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Date__c</fullName>
        <formula>IF(  Created_from_Lead__c , CreatedDate, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Which LOB is the Opportunity for?</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Optics</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locations_to_use_for_analysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Does practice want all locations to be considered for funding or a specific location only? Please provide Address and MDM# of location(s)</inlineHelpText>
        <label>Locations to use for analysis</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <inlineHelpText>Competition-The Account prefers other brands or companies
Performance-The Account is not happy with company/brand
VSP Rejected-LOB decided not to proceed with this Opportunity
Not Interested-The Account is not interested in this promotion or product</inlineHelpText>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>VSP Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marchon_Altair_Commitment_Year_1__c</fullName>
        <label>Marchon/Altair Commitment Year 1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon_Altair_Commitment_Year_2__c</fullName>
        <label>Marchon/Altair Commitment Year 2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon_Altair_Commitment_Year_3__c</fullName>
        <label>Marchon/Altair Commitment Year 3</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon_Funding__c</fullName>
        <label>Marchon Funding</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marchon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marchon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_LOB_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Opportunity a new sale for the LOB?</description>
        <label>New LOB Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Practice_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If account has identified a practice to purchase, please provide practice name, address and tax id</inlineHelpText>
        <label>New Practice Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Practice_Tax_ID__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>New Practice Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_or_Existing_Practice__c</fullName>
        <inlineHelpText>Is this a new build or are they purchasing another practice?</inlineHelpText>
        <label>New or Existing Practice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Practice</fullName>
                </value>
                <value>
                    <fullName>New Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Doctors__c</fullName>
        <label>Number of Doctors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Jobs__c</fullName>
        <description>Number of jobs the for the Opportunity.</description>
        <label>Number of Jobs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityNameDefault__c</fullName>
        <formula>TEXT(Division_Brand__c)&amp; &quot; - &quot; &amp;  Product_Program__c  &amp; &quot; - &quot; &amp;TEXT(Planned_Closed_Month__c)</formula>
        <label>OpportunityNameDefault</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optics_Brand_Commitment_Year_1__c</fullName>
        <label>Optics Brand Commitment Year 1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optics_Brand_Commitment_Year_2__c</fullName>
        <label>Optics Brand Commitment Year 2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optics_Brand_Commitment_Year_3__c</fullName>
        <label>Optics Brand Commitment Year 3</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optics_Funding__c</fullName>
        <label>Optics Funding</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Optics_Pre_Screen_Calculator__c</fullName>
        <formula>HYPERLINK(&quot;https://visionserviceplan.sharepoint.com/:x:/r/teams/CorpComm/Corp/SchoolsAssoc/Shared%20Documents/Premier%20Pathways/Expansion%20Model/Processes/Strategic%20Agreement%20Pre-Screen%20Calculator.xlsx?d=w42924d195533439593154c51a8fa294b&amp;csf=1&amp;e=g0mxLt&quot;, &quot;Pre-Screen Calculator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>RVP to complete pre-screen and attach document to the opportunity</inlineHelpText>
        <label>Optics Pre-Screen Calculator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Buying_Alliance_Affiliation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Buying Alliance Affiliation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Insurance__c</fullName>
        <label>% Other Insurance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Purpose_of_Funds__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required when &quot;Other&quot; is chosen from the Purpose of Funds field</inlineHelpText>
        <label>Other Purpose of Funds</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Structure__c</fullName>
        <label>Ownership Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Owner</fullName>
                </value>
                <value>
                    <fullName>Group Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photochromic__c</fullName>
        <inlineHelpText>Profitable practices will be 25% or greater</inlineHelpText>
        <label>% Photochromic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Closed_Month__c</fullName>
        <description>When is the Opportunity planning on Closing?</description>
        <label>Planned Closed Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premier_Value_Program_Received_Amount__c</fullName>
        <label>Received Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premier_Value_Program__c</fullName>
        <label>Premier Value Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eyefinity EHR</fullName>
                </value>
                <value>
                    <fullName>MMT (My Marketing Team)</fullName>
                </value>
                <value>
                    <fullName>Optovue</fullName>
                </value>
                <value>
                    <fullName>Synemed</fullName>
                </value>
                <value>
                    <fullName>Vision One (Credit Union)</fullName>
                </value>
                <value>
                    <fullName>Solutionreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Pay__c</fullName>
        <label>% Private Pay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Program_Name__c</fullName>
        <label>Product/Program Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25/250 Unity</fullName>
                </value>
                <value>
                    <fullName>25/250 Both</fullName>
                </value>
                <value>
                    <fullName>Both AR Growth</fullName>
                </value>
                <value>
                    <fullName>Both SunSync Growth</fullName>
                </value>
                <value>
                    <fullName>Both PAL Growth</fullName>
                </value>
                <value>
                    <fullName>Both Ethos Growth</fullName>
                </value>
                <value>
                    <fullName>Brand AR Growth</fullName>
                </value>
                <value>
                    <fullName>Brand SunSync Growth</fullName>
                </value>
                <value>
                    <fullName>Brand PAL Growth</fullName>
                </value>
                <value>
                    <fullName>ClearSlide</fullName>
                </value>
                <value>
                    <fullName>Custom Product/Promotion</fullName>
                </value>
                <value>
                    <fullName>Limited Time Offer (LTO)</fullName>
                </value>
                <value>
                    <fullName>PB Voucher</fullName>
                </value>
                <value>
                    <fullName>PB Voucher 1.67/Polar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product/Program</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Count__c</fullName>
        <label>Program Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <description>Status of the Product/Program.</description>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Progressive__c</fullName>
        <inlineHelpText>Profitable practices will be 40% or greater</inlineHelpText>
        <label>% Progressive</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Used to auto populate a Project on an Opportunity</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shift Series Phase 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_of_Funds__c</fullName>
        <label>Purpose of Funds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Equipment Purchase</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Remodeling</fullName>
                </value>
                <value>
                    <fullName>Remodeling &amp; Adding New Dr. Space</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <isActive>false</isActive>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Renovation</fullName>
                    <isActive>false</isActive>
                    <label>Renovation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <description>Requested Delivery Date of the Optics Contact Lens kits being ordered</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
</CustomObject>